Fixed z-index issue where the backdrop was covering links

--- a/src/components/Pages/Home/Home.scss
+++ b/src/components/Pages/Home/Home.scss
@@ -19,7 +19,6 @@
   padding-left: 20%;
   padding-right: 20%;
   margin-bottom: 5rem;
-
 }
 
 .tagline-container {
@@ -34,6 +33,7 @@
   color: var(--tertiary);
   position: relative;
   text-align: left;
+  z-index: 10;
 }
 .tagline-container h2:nth-child(1) {
   font-family: "Lato", sans-serif;
